css/buddypress.css
/* ... */
/* Breakpoint 1 up to Breakpoint 2 */
@media screen and (min-width: 561px) and (max-width: 740px) {
	body.fixed-bp-single-item .entry-header {
		top: 76px;
		padding: 13px 91px 11px 145px;
	}

	body.fixed-bp-single-item #buddypress #item-header-avatar {
		top: 87px;
		left: 80px;
	}

	body.fixed-bp-single-item #buddypress .item-actions-toggle {
		top: 87px;
		right: 48px;
		/* Shrink button again */
		width: 32px;
		height: 32px;
		padding: 5px;
		line-height: 32px;
	}

		body.fixed-bp-single-item #buddypress #item-actions {
			top: 130px;
			right: 42px;
		}

		body.js.fixed-bp-single-item.item-actions-toggled #buddypress #item-actions {
			top: 140px;
		}
}

/* Up to Breakpoint 2 with fixed .admin-bar */
@media screen and (min-width: 601px) and (max-width: 740px) {
	body.fixed-bp-single-item .entry-header {
		top: 122px;
	}

	body.fixed-bp-single-item #buddypress #item-header-avatar,
	body.fixed-bp-single-item #buddypress .item-actions-toggle {
		top: 133px;
	}

		body.js.fixed-bp-single-item #buddypress #item-actions {
			top: 176px;
		}

		body.js.fixed-bp-single-item.item-actions-toggled #buddypress #item-actions {
			top: 186px;
		}
}

/*--------------------------------------------------------------
2.3 Item list (members/groups)
--------------------------------------------------------------*/
.avatar-block .item-avatar,
.bp-item-list li {
	position: relative;
	display: inline-block; /* no floating */
	width: 50px;
	height: 50px;
	margin: 0px 3px 7px 0px; /* 4px space in between */
}

	.avatar-block .item-avatar a:before,
	.avatar-block .item-avatar a:after,
	.bp-item-list li .item-title {
		position: absolute;
		bottom: 100%;
		left: 50%;
		visibility: hidden;
		opacity: 0;
		pointer-events: none;
		/* Animation */
		-webkit-transition: all .25s ease-in;
		transition: all .25s ease-in;
	}

	.avatar-block .item-avatar a:before,
	.bp-item-list li .item-title a {
		display: inline-block;
		padding: 5px 8px;
		margin-bottom: 5px;
		-webkit-transform: translateX(-50%);
		transform: translateX(-50%);
		background-color: #404040;
		color: #fff;
		font-family: 'Montserrat', Arial, sans-serif;
		font-size: 11px;
		line-height: 1.3em;
		text-align: center;
	}

	.avatar-block .item-avatar a:before {
		content: attr(title);
	}

	.avatar-block .item-avatar a:after,
	.bp-item-list li .item-title:after {
		content: '';
		position: absolute;
		bottom: 0px;
		margin-left: -5px;
		border-top: 5px solid #404040;
		border-left: 5px solid transparent;
		border-right: 5px solid transparent;
	}

	.avatar-block .item-avatar a:after {
		bottom: 100%;
	}

	.avatar-block .item-avatar a:hover:before,
	.avatar-block .item-avatar a:hover:after,
	.bp-item-list li:hover .item-title {
		visibility: visible;
		bottom: calc( 100% + 5px );
		opacity: 1;
	}

	.avatar-block .item-avatar a,
	.bp-item-list .item-avatar a {
		display: inline-block;
	}

	.avatar-block .item-avatar img,
	.bp-item-list .item-avatar img {
		vertical-align: bottom;
		width: 50px;
		height: 50px;
	}

/*--------------------------------------------------------------
2.4 Table List (notifications/messages)
--------------------------------------------------------------*/
#buddypress .table-list,
#buddypress .table-list ul {
	list-style: none;
	margin: 1.5em 0px 0px;
	padding: 0px;
}

	#buddypress .table-list > li {
		margin: 0px -25px;
		padding: 10px 25px;
	}

	/* Last child is the bulk selection row */
	#buddypress .table-list > li:nth-child(odd):not(:last-child) {
		background-color: #f9f9f9;
	}

	#buddypress .table-list > li:last-child {
		background-color: none;
		margin-top: 1.5em;
		padding-top: 0px;
		padding-bottom: 0px;
	}

		#buddypress .table-list > li ul {
			position: relative;
			margin: 0px;
		}

			#buddypress .table-list .bulk-select-check,
			#buddypress .table-list .bulk-select-all {
				position: absolute;
				top: calc( 50% - 13px ); /* checkbox = 24 x 26 */
			}

			#buddypress .table-list .bulk-select-check ~ li,
			#buddypress .table-list .bulk-select-all ~ li {
				margin-left: 44px;
			}

@media screen and (min-width: 561px) {
	#buddypress .table-list > li {
		margin: 0px -35px;
		padding: 10px 35px;
	}
}

/*--------------------------------------------------------------
3.0 Members
--------------------------------------------------------------*/
#buddypress #members-dir-search {
	display: none;
}

/*--------------------------------------------------------------
3.1 User Profile
--------------------------------------------------------------*/
.bp-user .entry-content {
	margin-top: 0px;
}

#buddypress .item-list-tabs + form > label:first-child {
	margin-top: 35px;
}

#buddypress .item-list-tabs + form > label {
	margin: 1.5em 0px .5em;
	display: inline-block;
}

/*--------------------------------------------------------------
3.2 My Profile
--------------------------------------------------------------*/
.buddypress.my-account #item-header-avatar .change-avatar:after {
	content: '\f464'; /* dashicons-edit */
	background: rgba(51, 165, 55, 1);
	position: absolute;
	top: calc( 50% - 25px );
	left: calc( 50% - 25px );
	width: 50px;
	height: 50px;
	padding: 10px;
	border-radius: 50%;
	font: 30px/30px dashicons;
	border: 1px dashed #bbb;
	background: #e6e6e6;
	color: #404040;
	opacity: 0;
	/* Animation */
	-webkit-transition: opacity .2s ease-in, background .2s ease-in, border .2s ease-in, color .2s ease-in;
	transition: opacity .2s ease-in, background .2s ease-in, border .2s ease-in, color .2s ease-in;
}

.buddypress.my-account #item-header-avatar .item-avatar:hover + .change-avatar:after,
.buddypress.my-account #item-header-avatar .change-avatar:hover:after {
	opacity: 1;
}

	.buddypress.my-account #item-header-avatar .change-avatar:hover:after {
		background: rgba(191, 38, 105, 1);
		color: #fff;
	}
/* ... */

